--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     </div>
     <script type="text/javascript" src="verticalScroller.js"></script>
     <script type="text/javascript">
-      // var ob = new Scroller('id-2');
-      // var ob1 = new Scroller('id-1');
+      // var ob = new Scroller('#id-2');
+      var ob1 = new Scroller('#id-1');
       $("#id-2").scroller();
-      $("#id-1").scroller();
+      // $("#id-1").scroller();
     </script>
   </body>
 </html>
