--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       body {
         background-color: #242424;
       }
-      #id-1 {
+      .AutoScroll {
         background-color: #191919;
         color: #fff;
         position: relative;
@@ -26,16 +26,10 @@
         padding: 20px;
         border: 1px solid #121212;
       }
-
-      #id-2 {
-        background-color: #191919;
-        color: #fff;
+      .outer {
         position: relative;
-        top: 150px;
-        max-height: 400px;
-        overflow-y: scroll;
-        padding: 20px;
-        border: 1px solid #121212;
+        top: 80px;
+        color: white;
       }
 
     </style>
@@ -43,7 +37,8 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+        <div class="col-sm-8 col-md-6">
+          <h2 class="outer">First Scroller</h2>
           <div class="AutoScroll" id="id-1">
             <div>
               <h3>What is Lorem Ipsum?</h3>
@@ -68,9 +63,9 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+
+        <div class="col-sm-8 col-md-6">
+          <h2 class="outer">Second Scroller</h2>
           <div class="AutoScroll" id="id-2">
             <div>
               <h3>What is Lorem Ipsum?</h3>
