--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
     </div>
     <div class="AutoScroll scroller" id="hello" data-config='{"amount" : 800}'>
             </div>
-    <script type="text/javascript" src="verticalScroller.js"></script>
+    <script type="text/javascript" src="autoscroll.js"></script>
     <script type="text/javascript">
       // var ob = new Scroller('#id-2');
       // var ob1 = new Scroller('{"element" : "#id", "delay" : 3000 , "amount" : "100" }');
-      $("#id-2").scroller('{"delay" : 1000 ,"amount" : 100 }');
+      $("#id-2").scroller();
       // $("#id-1").scroller();
     </script>
   </body>
