--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Theme Made By www.w3schools.com - No Copyright -->
-    <title>verticalScroller.js</title>
+    <title>autoscroll.js</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-6">
           <h2 class="outer">First Scroller</h2>
-          <div class="AutoScroll scroller" id="id" data-config='{"delay" : 2000 , "amount" : 200}'>
+          <div class="AutoScroll scroller" id="id" data-config='{"delay" : 1000 , "amount" : 50}'>
             <div>
               <h3>What is Lorem Ipsum?</h3>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -93,14 +93,9 @@
         </div>
       </div>
     </div>
-    <div class="AutoScroll scroller" id="hello" data-config='{"amount" : 800}'>
-            </div>
     <script type="text/javascript" src="autoscroll.js"></script>
     <script type="text/javascript">
-      // var ob = new Scroller('#id-2');
-      // var ob1 = new Scroller('{"element" : "#id", "delay" : 3000 , "amount" : "100" }');
       $("#id-2").scroller();
-      // $("#id-1").scroller();
     </script>
   </body>
 </html>
