--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Theme Made By www.w3schools.com - No Copyright -->
     <title>autoscroll.js</title>
 
     <meta charset="utf-8">
@@ -10,6 +9,7 @@
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="jquery-3.1.1.js"></script> -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <style>
@@ -67,7 +67,7 @@
 
         <div class="col-sm-8 col-md-6">
           <h2 class="outer">Second Scroller</h2>
-          <div class="AutoScroll" id="id-2">
+          <div class="AutoScroll id-2">
             <div>
               <h3>What is Lorem Ipsum?</h3>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
@@ -95,7 +95,7 @@
     </div>
     <script type="text/javascript" src="autoscroll.js"></script>
     <script type="text/javascript">
-      $("#id-2").scroller();
+      $(".id-2").scroller();
     </script>
   </body>
 </html>
